{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 436,
  "lineage": "5506ff48-9e1b-7fe7-fd02-fd0dc192e5c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:vpc/vpc-009981e06cbaff608",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0fe9bf7fca6add2a1",
            "default_route_table_id": "rtb-01d008909ad8b3f24",
            "default_security_group_id": "sg-0666c8d8990b1fd37",
            "dhcp_options_id": "dopt-087d02cab820d24b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-009981e06cbaff608",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d008909ad8b3f24",
            "owner_id": "794038256791"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0265bbb25ceee0478",
            "arn": "arn:aws:ec2:eu-north-1:794038256791:elastic-ip/eipalloc-0265bbb25ceee0478",
            "domain": "vpc",
            "id": "eipalloc-0265bbb25ceee0478",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-60-108-116.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.108.116",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:vpc/vpc-0567df58af6fe49a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-035a0c8835328689e",
            "default_route_table_id": "rtb-0a0501f050d21b44f",
            "default_security_group_id": "sg-00a820049fb442435",
            "dhcp_options_id": "dopt-087d02cab820d24b8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0567df58af6fe49a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a0501f050d21b44f",
            "owner_id": "794038256791"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:security-group/sg-00618dc31e9d99971",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-00618dc31e9d99971",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008cfaf7a343eb314"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Freshfarm-cluster-cluster-20250323033438367500000010",
            "name_prefix": "Freshfarm-cluster-cluster-",
            "owner_id": "794038256791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-cluster-cluster",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-cluster-cluster",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:security-group/sg-008cfaf7a343eb314",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ECR Pull",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-008cfaf7a343eb314",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00618dc31e9d99971"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00618dc31e9d99971"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00618dc31e9d99971"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00618dc31e9d99971"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00618dc31e9d99971"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00618dc31e9d99971"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "Freshfarm-cluster-node-2025032303343820760000000f",
            "name_prefix": "Freshfarm-cluster-node-",
            "owner_id": "794038256791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-cluster-node",
              "Project": "stylish-threads",
              "Terraform": "true",
              "kubernetes.io/cluster/Freshfarm-cluster": "owned"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-cluster-node",
              "Project": "stylish-threads",
              "Terraform": "true",
              "kubernetes.io/cluster/Freshfarm-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3530782463",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00618dc31e9d99971",
            "security_group_rule_id": "sgr-0c865a7475462ecec",
            "self": false,
            "source_security_group_id": "sg-008cfaf7a343eb314",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecr_pull",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ECR Pull",
            "from_port": 443,
            "id": "sgrule-3881021921",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-008cfaf7a343eb314",
            "security_group_rule_id": "sgr-0651a6342655efee5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1751238014",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-008cfaf7a343eb314",
            "security_group_rule_id": "sgr-0352888854610d6d9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3737562502",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-008cfaf7a343eb314",
            "security_group_rule_id": "sgr-0dc420531ff4d51a5",
            "self": false,
            "source_security_group_id": "sg-00618dc31e9d99971",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2494036215",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-008cfaf7a343eb314",
            "security_group_rule_id": "sgr-00f413819f4ef31b9",
            "self": false,
            "source_security_group_id": "sg-00618dc31e9d99971",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1575329633",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-008cfaf7a343eb314",
            "security_group_rule_id": "sgr-086d05ae98c6f2635",
            "self": false,
            "source_security_group_id": "sg-00618dc31e9d99971",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1320788800",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-008cfaf7a343eb314",
            "security_group_rule_id": "sgr-0e85c97666e344dd9",
            "self": false,
            "source_security_group_id": "sg-00618dc31e9d99971",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-706252939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-008cfaf7a343eb314",
            "security_group_rule_id": "sgr-0e56c631da4cea3a5",
            "self": false,
            "source_security_group_id": "sg-00618dc31e9d99971",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-48531668",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-008cfaf7a343eb314",
            "security_group_rule_id": "sgr-02bd740e327e0c923",
            "self": false,
            "source_security_group_id": "sg-00618dc31e9d99971",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-756132571",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-008cfaf7a343eb314",
            "security_group_rule_id": "sgr-00f6fcd1bb856c6b7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3257958442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-008cfaf7a343eb314",
            "security_group_rule_id": "sgr-0ba4234b79af2c367",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1718559685",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-008cfaf7a343eb314",
            "security_group_rule_id": "sgr-04adcaa1d9209dbf9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:network-acl/acl-05348088406125354",
            "default_network_acl_id": "acl-05348088406125354",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05348088406125354",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "794038256791",
            "subnet_ids": [
              "subnet-00d4f3404d1979f77",
              "subnet-0134a3df34ba4888c",
              "subnet-0158a83323ae1a36a",
              "subnet-0985f515fd3ea4018",
              "subnet-09ed26ade1a781cf0",
              "subnet-0d2054d2c8ab9e053"
            ],
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-default",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-default",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:route-table/rtb-0d1857f87ca5f4bba",
            "default_route_table_id": "rtb-0d1857f87ca5f4bba",
            "id": "rtb-0d1857f87ca5f4bba",
            "owner_id": "794038256791",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-default",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-default",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:security-group/sg-0677ddf328574f9b2",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0677ddf328574f9b2",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "794038256791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-default",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-default",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3d2e61665805e90",
            "arn": "arn:aws:ec2:eu-north-1:794038256791:elastic-ip/eipalloc-0d3d2e61665805e90",
            "association_id": "eipassoc-0505719ae4ae2f23d",
            "domain": "vpc",
            "id": "eipalloc-0d3d2e61665805e90",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0e6960494fd4000e5",
            "private_dns": "ip-10-0-101-163.eu-north-1.compute.internal",
            "private_ip": "10.0.101.163",
            "public_dns": "ec2-16-170-85-144.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.85.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-eu-north-1a",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-eu-north-1a",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6cb9b7c9a2af8ce",
            "arn": "arn:aws:ec2:eu-north-1:794038256791:elastic-ip/eipalloc-0a6cb9b7c9a2af8ce",
            "association_id": "eipassoc-08b838bf995fc3d8e",
            "domain": "vpc",
            "id": "eipalloc-0a6cb9b7c9a2af8ce",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0de1bee68fa05dd30",
            "private_dns": "ip-10-0-102-142.eu-north-1.compute.internal",
            "private_ip": "10.0.102.142",
            "public_dns": "ec2-51-20-49-118.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.49.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-eu-north-1b",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-eu-north-1b",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce8785cb1ed17213",
            "arn": "arn:aws:ec2:eu-north-1:794038256791:elastic-ip/eipalloc-0ce8785cb1ed17213",
            "association_id": "eipassoc-08303b67017e276f3",
            "domain": "vpc",
            "id": "eipalloc-0ce8785cb1ed17213",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-000f09bed1dfe7918",
            "private_dns": "ip-10-0-103-246.eu-north-1.compute.internal",
            "private_ip": "10.0.103.246",
            "public_dns": "ec2-16-170-51-96.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.51.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-eu-north-1c",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-eu-north-1c",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:internet-gateway/igw-0855c2d51e9fd259a",
            "id": "igw-0855c2d51e9fd259a",
            "owner_id": "794038256791",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3d2e61665805e90",
            "association_id": "eipassoc-0505719ae4ae2f23d",
            "connectivity_type": "public",
            "id": "nat-037edd4622ff8d557",
            "network_interface_id": "eni-0e6960494fd4000e5",
            "private_ip": "10.0.101.163",
            "public_ip": "16.170.85.144",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09ed26ade1a781cf0",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-eu-north-1a",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-eu-north-1a",
              "Project": "stylish-threads",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6cb9b7c9a2af8ce",
            "association_id": "eipassoc-08b838bf995fc3d8e",
            "connectivity_type": "public",
            "id": "nat-00da7ff20990c90f2",
            "network_interface_id": "eni-0de1bee68fa05dd30",
            "private_ip": "10.0.102.142",
            "public_ip": "51.20.49.118",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00d4f3404d1979f77",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-eu-north-1b",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-eu-north-1b",
              "Project": "stylish-threads",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce8785cb1ed17213",
            "association_id": "eipassoc-08303b67017e276f3",
            "connectivity_type": "public",
            "id": "nat-035bf8bf2dc8715a2",
            "network_interface_id": "eni-000f09bed1dfe7918",
            "private_ip": "10.0.103.246",
            "public_ip": "16.170.51.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0134a3df34ba4888c",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-eu-north-1c",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-eu-north-1c",
              "Project": "stylish-threads",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0359f0f648105ddf71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-037edd4622ff8d557",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0359f0f648105ddf7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-000acff66ed65b9421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00da7ff20990c90f2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-000acff66ed65b942",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a13a07ba24a0013c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-035bf8bf2dc8715a2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a13a07ba24a0013c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0855c2d51e9fd259a",
            "id": "r-rtb-0a012b98c6d8437211080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a012b98c6d843721",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:route-table/rtb-0359f0f648105ddf7",
            "id": "rtb-0359f0f648105ddf7",
            "owner_id": "794038256791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037edd4622ff8d557",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-private-eu-north-1a",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-private-eu-north-1a",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:route-table/rtb-000acff66ed65b942",
            "id": "rtb-000acff66ed65b942",
            "owner_id": "794038256791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00da7ff20990c90f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-private-eu-north-1b",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-private-eu-north-1b",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:route-table/rtb-0a13a07ba24a0013c",
            "id": "rtb-0a13a07ba24a0013c",
            "owner_id": "794038256791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-035bf8bf2dc8715a2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-private-eu-north-1c",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-private-eu-north-1c",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:route-table/rtb-0a012b98c6d843721",
            "id": "rtb-0a012b98c6d843721",
            "owner_id": "794038256791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0855c2d51e9fd259a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-public",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-public",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9c6a2d727f73f4f",
            "route_table_id": "rtb-0359f0f648105ddf7",
            "subnet_id": "subnet-0d2054d2c8ab9e053"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029b1b918eda02bae",
            "route_table_id": "rtb-000acff66ed65b942",
            "subnet_id": "subnet-0158a83323ae1a36a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d16520c09f5fbfa",
            "route_table_id": "rtb-0a13a07ba24a0013c",
            "subnet_id": "subnet-0985f515fd3ea4018"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee260b5b8cd5888a",
            "route_table_id": "rtb-0a012b98c6d843721",
            "subnet_id": "subnet-09ed26ade1a781cf0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db8ac3c2e625b0d7",
            "route_table_id": "rtb-0a012b98c6d843721",
            "subnet_id": "subnet-00d4f3404d1979f77"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07550a0bd4a30451f",
            "route_table_id": "rtb-0a012b98c6d843721",
            "subnet_id": "subnet-0134a3df34ba4888c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:subnet/subnet-0d2054d2c8ab9e053",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2054d2c8ab9e053",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-private-eu-north-1a",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-private-eu-north-1a",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:subnet/subnet-0158a83323ae1a36a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0158a83323ae1a36a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-private-eu-north-1b",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-private-eu-north-1b",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:subnet/subnet-0985f515fd3ea4018",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0985f515fd3ea4018",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-private-eu-north-1c",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-private-eu-north-1c",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:subnet/subnet-09ed26ade1a781cf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ed26ade1a781cf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-public-eu-north-1a",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-public-eu-north-1a",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:subnet/subnet-00d4f3404d1979f77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d4f3404d1979f77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-public-eu-north-1b",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-public-eu-north-1b",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:subnet/subnet-0134a3df34ba4888c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0134a3df34ba4888c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038256791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-public-eu-north-1c",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc-public-eu-north-1c",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07350f6e598dcdb5d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:794038256791:vpc/vpc-07350f6e598dcdb5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05348088406125354",
            "default_route_table_id": "rtb-0d1857f87ca5f4bba",
            "default_security_group_id": "sg-0677ddf328574f9b2",
            "dhcp_options_id": "dopt-087d02cab820d24b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07350f6e598dcdb5d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1857f87ca5f4bba",
            "owner_id": "794038256791",
            "tags": {
              "Environment": "production",
              "Name": "Freshfarm-vpc",
              "Project": "stylish-threads",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Freshfarm-vpc",
              "Project": "stylish-threads",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}